--- a/styles.css
+++ b/styles.css
@@ -1,44 +1,41 @@
 body {
-    text-align: center;
+    border: 2px solid red; /*testing*/
     font-family: Arial, sans-serif;
+    text-align: center;
     padding-top: 5%;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 h1 {
+    border: 2px solid red; /*testing*/
+    font-family: 'Courier New', Courier, monospace;
     font-size: 46px;
 }
 
 .recipe-container {
-    display: flex;
+    border: 4px solid red; /*testing*/
     justify-content: center;
+    display: flex;
     gap: 20px;
-    flex-wrap: wrap;
-    margin: 20px;
-    align-items: center;
-    flex-direction: row;
-    flex-wrap: wrap;
 }
 
 .recipe {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-}
-
-.recipe img {
-    max-width: 20%;
-    height: auto;
+    border: 3px solid blue;
+    justify-content: center;
     display: block;
 }
 
-.recipe a {
-    margin-top: 10px;
-    text-decoration: none;
-    color: #333;
-    font-size: 18px;
+div > img {
+    border: 3px solid red; /*testing*/
+    max-width: 100%;
 }
 
 .recipe a:hover {
-    color: cadetblue;
     text-decoration: underline;
+    color: cadetblue;
+}
+
+a {
+    border: 1px solid red; /*testing*/
 }
