--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
 body {
-    border: 2px solid red; /*testing*/
+    border: 2px solid green; /*testing*/
     font-family: Arial, sans-serif;
     text-align: center;
     padding-top: 5%;
     padding-left: 10%;
     padding-right: 10%;
+    margin: 0;
+    align-items: "center";
 }
 
 h1 {
@@ -18,6 +20,7 @@ h1 {
     justify-content: center;
     display: flex;
     gap: 20px;
+    
 }
 
 .recipe {
@@ -38,4 +41,5 @@ div > img {
 
 a {
     border: 1px solid red; /*testing*/
+    text-decoration: none;
 }
